--- a/server/index.html
+++ b/server/index.html
@@ -26,15 +26,20 @@
             <textarea rows="8" name="body"></textarea>
             <br>
             <button type="submit" value="Send Email" onclick="sendEmail()">Submit</button>
-            <p>
+            <span id="success_msg"></span>
+            <span id="error_msg"></span>
         </div>
     </form>
     
-    
+    <script src="js/jquery-3.4.1.min.js"></script>    
 
     <!--Source : https://codepen.io/wefiy/pen/WPpEwo-->
     <script src="js/matrix.js"></script>
     <!--SMTP-->
     <!-- <script src="js/smtp.js"></script> -->
     <!--<script src="https://smtpjs.com/v3/smtp.js"></script>-->
+
+
 </body></html>
+
+<!-- 7#xV8%*75mZK53^h@bG) -->
